--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
 </head>
+    
+    <!--CSS CODE -->
 
 <style>
     body {
@@ -63,6 +65,8 @@
         }
     }
 </style>
+               <!-- CSS CODE END -->
+    <!-- ================================ -->
 
 <body>
 
